@@ -1,0 +1,43 @@
+#objdump: -r
+#name: nested irp/irpc/rept
+
+.*: +file format .*
+
+RELOCATION RECORDS FOR .*
+OFFSET[ 	]+TYPE[ 	]+VALUE.*
+0+00[ 	]+[a-zA-Z0-9_]+[ 	]+irp_irp_19
+0+04[ 	]+[a-zA-Z0-9_]+[ 	]+irp_irp_18
+0+08[ 	]+[a-zA-Z0-9_]+[ 	]+irp_irp_29
+0+0c[ 	]+[a-zA-Z0-9_]+[ 	]+irp_irp_28
+0+10[ 	]+[a-zA-Z0-9_]+[ 	]+irp_irpc_19
+0+14[ 	]+[a-zA-Z0-9_]+[ 	]+irp_irpc_18
+0+18[ 	]+[a-zA-Z0-9_]+[ 	]+irp_irpc_29
+0+1c[ 	]+[a-zA-Z0-9_]+[ 	]+irp_irpc_28
+0+20[ 	]+[a-zA-Z0-9_]+[ 	]+irp_rept_1
+0+24[ 	]+[a-zA-Z0-9_]+[ 	]+irp_rept_1
+0+28[ 	]+[a-zA-Z0-9_]+[ 	]+irp_rept_2
+0+2c[ 	]+[a-zA-Z0-9_]+[ 	]+irp_rept_2
+0+30[ 	]+[a-zA-Z0-9_]+[ 	]+irpc_irp_19
+0+34[ 	]+[a-zA-Z0-9_]+[ 	]+irpc_irp_18
+0+38[ 	]+[a-zA-Z0-9_]+[ 	]+irpc_irp_29
+0+3c[ 	]+[a-zA-Z0-9_]+[ 	]+irpc_irp_28
+0+40[ 	]+[a-zA-Z0-9_]+[ 	]+irpc_irpc_19
+0+44[ 	]+[a-zA-Z0-9_]+[ 	]+irpc_irpc_18
+0+48[ 	]+[a-zA-Z0-9_]+[ 	]+irpc_irpc_29
+0+4c[ 	]+[a-zA-Z0-9_]+[ 	]+irpc_irpc_28
+0+50[ 	]+[a-zA-Z0-9_]+[ 	]+irpc_rept_1
+0+54[ 	]+[a-zA-Z0-9_]+[ 	]+irpc_rept_1
+0+58[ 	]+[a-zA-Z0-9_]+[ 	]+irpc_rept_2
+0+5c[ 	]+[a-zA-Z0-9_]+[ 	]+irpc_rept_2
+0+60[ 	]+[a-zA-Z0-9_]+[ 	]+rept_irp_9
+0+64[ 	]+[a-zA-Z0-9_]+[ 	]+rept_irp_8
+0+68[ 	]+[a-zA-Z0-9_]+[ 	]+rept_irp_9
+0+6c[ 	]+[a-zA-Z0-9_]+[ 	]+rept_irp_8
+0+70[ 	]+[a-zA-Z0-9_]+[ 	]+rept_irpc_9
+0+74[ 	]+[a-zA-Z0-9_]+[ 	]+rept_irpc_8
+0+78[ 	]+[a-zA-Z0-9_]+[ 	]+rept_irpc_9
+0+7c[ 	]+[a-zA-Z0-9_]+[ 	]+rept_irpc_8
+0+80[ 	]+[a-zA-Z0-9_]+[ 	]+rept_rept
+0+84[ 	]+[a-zA-Z0-9_]+[ 	]+rept_rept
+0+88[ 	]+[a-zA-Z0-9_]+[ 	]+rept_rept
+0+8c[ 	]+[a-zA-Z0-9_]+[ 	]+rept_rept
